# model

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TESTING.md  bitbucket-pipelines.yml  model.default  sonar-project.properties
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_compatibility.md
.github/scripts/: check_license_policy.py  generate_sbom.sh  validate_notice.py
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
benches/: benchmark.rs
benches/benchmark_data/: boxes.txt  config.yaml  output_34x60x30.txt  output_68x120x30.txt  scores.txt
examples/: inference_test.rs
g2d-sys/: Cargo.toml  update.sh
g2d-sys/src/: ffi.rs  ffi_new.rs  fourcc.rs  lib.rs
src/: args.rs  buildmsgs.rs  compress.rs  fps.rs  image.rs  kalman.rs  lib.rs  main.rs  masks.rs  model.rs  nms.rs  rtm_model.rs  setup.rs  tflite_model.rs  tracker.rs
src/detect/src/: main.rs  setup.rs
src/runtime/: ara2.rs  mod.rs  tflite.rs
src/segmentation/: buildsegmentationmsgs.rs  fps.rs  main.rs  setup.rs
tests/: integration_test.rs
tflitec-sys/: Cargo.toml  update.sh
tflitec-sys/src/: delegate.rs  ffi.rs  lib.rs  metadata.rs  metadata_schema_generated.rs  schema_generated.rs  tensor.rs
