[package]
name = "edgefirst-model"
description = "Maivin Detection Service"
repository = "https://bitbucket.org/au-zone/maivin-detect"
version = "0.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]
rtm = ["vaal"]

[dependencies]
async-pidfd = "0.1.4"
cdr = "0.2.4"
clap = { version = "4.5.43", features = ["derive", "env"] }
dma-buf = "0.4.0"
dma-heap = "0.4.1"
edgefirst-schemas = { version = "1.3.1" }
enum_dispatch = "0.3.13"
g2d-sys = { version = "1.0.0", path = "g2d-sys" }
lapjv = "0.2.1"
log = { version = "0.4.27" }
nalgebra = "0.32.6"
ndarray = "0.16.1"
nix = { version = "0.30.1", features = ["time"] }
num-traits = "0.2.19"
pidfd_getfd = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
tflitec-sys = { path = "./tflitec-sys" }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.2", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
uuid = { version = "1.17.0", features = ["v4"] }
vaal = { git = "https://github.com/DeepViewML/vaal-rs.git", optional = true}
zip = "4.3.0"
zenoh = "1.5.0"
zstd = "0.13.3"

[dev-dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
rand = "0.9.2"
