[package]
name = "edgefirst-model"
description = "EdgeFirst Model Node - AI inference service for EdgeFirst Perception"
repository = "https://github.com/EdgeFirstAI/model"
homepage = "https://www.edgefirst.ai"
license = "Apache-2.0"
version = "2.6.1"
edition = "2024"

[workspace]
members = ["tflitec-sys"]

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]
rtm = ["vaal"]

[dependencies]
async-pidfd = "0.1.4"
clap = { version = "4.5.47", features = ["derive", "env"] }
edgefirst-hal = "0.6.2"
four-char-code = "2.3.0"
edgefirst-schemas = "1.5.3"
edgefirst-tracker = "0.6.2"
enum_dispatch = "0.3.13"
log = { version = "0.4.28" }
ndarray = { version = "0.16.1", features = ["rayon"] }
nix = { version = "0.30.1", features = ["time"] }
pidfd_getfd = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.33"
tflitec-sys = { path = "./tflitec-sys" }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.2", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
uuid = { version = "1.18.1", features = ["v4"] }
vaal = { git = "https://github.com/DeepViewML/vaal-rs.git", optional = true}
zip = "5.0.0"
zenoh = "1.5.0"
zstd = "0.13.3"
fast-math = "0.1.1"

[dev-dependencies]
ndarray-stats = "0.6.0"
rand = "0.9.2"
