[package]
name = "tflitec-sys"
description = "Low-level FFI bindings for the TensorflowLite C API Library"
license = "Apache-2.0"
homepage = "https://www.edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/model"
keywords = ["edgefirst", "tensorflow", "tflite"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "1.0.0"
edition = "2024"

[dependencies]
libloading = "0.8.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
log = "0.4.20"
flatbuffers = "25.2.10"
zip = "4.3.0"
yaml-rust2 = "0.10"

